--- a/fe/src/app.html
+++ b/fe/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.webp" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta property="og:image" content="%sveltekit.assets%/favicon.webp" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
