Fixed reference to favicon

--- a/fe/src/app.html
+++ b/fe/src/app.html
@@ -2,9 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.webp" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:image" content="%sveltekit.assets%/favicon.webp" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
